--- a/mosaic.html
+++ b/mosaic.html
@@ -10,19 +10,19 @@
 <body>
     <div class="parent">
         <div class="one child">
-            <img src="./images/land1.jpg" alt="First Image of Nature" style="width: 100%;">
+            <img src="./images/land1.jpg" alt="First Image of Nature">
         </div>
         <div class="two child">
-            <img src="./images/port1.jpg" alt="Second Image of Nature" style="width: 100%;">
+            <img src="./images/port1.jpg" alt="Second Image of Nature" >
         </div>
         <div class="three child">
-            <img src="./images/square.jpg" alt="Third Image of Nature" style="width: 100%;">
+            <img src="./images/square.jpg" alt="Third Image of Nature" >
         </div>
         <div class="four child">
-            <img src="./images/land2.jpg" alt="Fourth Image of Nature" style="width: 100%;">
+            <img src="./images/land2.jpg" alt="Fourth Image of Nature">
         </div>
         <div class="five child">
-            <img src="./images/port2.jpg" alt="Fifth Image of Nature" style="width: 100%;">
+            <img src="./images/port2.jpg" alt="Fifth Image of Nature">
         </div>
     </div>
     
